updated to reflect current status of thigns Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.6 2001/05/21 03:39:25 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.7 2001/05/21 18:48:08 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/05/21 03:39:25 $
+Last Updated: $Date: 2001/05/21 18:48:08 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -77,6 +77,7 @@ Last Updated: $Date: 2001/05/21 03:39:25 $
     <li>Show an issue has been started.</li>
     <li>Query for an existing issue has been started.</li>
     <li>Attribute editor has been started.</li>
+    <li>Integration of Flux has been started.</li>
 </ul>
 
 <h3>Details</h3>
@@ -94,12 +95,27 @@ projects on <a href="http://jakarta.apache.org/">jakarta.apache.org</a>
 <h3>Recent Activities</h3>
 
 <p>
-We are now in the process of focusing our attention IA/UI issues as well
-as continuing some initial application development. Because things
-change quickly and we may not have time to always update this document,
-it is best to consider the mailing list archives the most up to date
-reflection of the current project status.
+Because things change quickly and we may not have time to always update
+this document, it is best to consider the mailing list archives the most
+up to date reflection of the current project status.
 </p>
+
+<ul>
+<li>
+    We are now in the process of focusing our attention <a
+    href="/servlets/ProjectDocumentList">IA/UI development</a> as well
+    as continuing some initial application development. We have also
+    started a <a href="/servlets/ProjectMailingListList">"ui_docs"
+    mailing list</a> to discuss this development.
+</li>
+<li>
+    John has <a href="/issues/show_bug.cgi?id=5">started</a> working on
+    integration of Flux which is a web application that allows for the
+    modification of users/roles/permissions/groups within the Scarab
+    system. This is important for standalone use as well as for testing
+    integrated use.
+</li>
+</ul>
 
 <h3>What People Are Currently Working On</h3>
 
