--- a/www/project_nav.html
+++ b/www/project_nav.html
@@ -1,4 +1,4 @@
-<a class="nav" href="/project_status.html">Status/TODO</a> |
+<a class="nav" href="/project_status.html">Status</a> |
 <a class="nav" href="/project_docs.html">Scarab Documents</a> |
-<a class="nav" href="/project_development_tools_and_technology.html">Tools/Technologies</a> |
-<a class="nav" href="/project_members.html">Getting Involved</a> 
+<a class="nav" href="/project_members.html">Getting Involved</a> |
+<a class="nav" href="/project_development_tools_and_technology.html">Tools/Technologies</a>
