--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.7 2001/05/21 18:48:08 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.8 2001/05/21 23:30:50 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/05/21 18:48:08 $
+Last Updated: $Date: 2001/05/21 23:30:50 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -78,6 +78,10 @@ Last Updated: $Date: 2001/05/21 18:48:08 $
     <li>Query for an existing issue has been started.</li>
     <li>Attribute editor has been started.</li>
     <li>Integration of Flux has been started.</li>
+    <li>Module code has been abstracted out using a Factory and Services
+    pattern so that it is possible to <a
+    href="integration.html">integrate</a> Scarab into other
+    systems.</li>
 </ul>
 
 <h3>Details</h3>
@@ -114,6 +118,11 @@ up to date reflection of the current project status.
     modification of users/roles/permissions/groups within the Scarab
     system. This is important for standalone use as well as for testing
     integrated use.
+</li>
+<li>
+    5-21-01 - Jon S. pretty much finished up the abstraction of the
+    Module code so that any implementation can be provided of a Module
+    and Scarab will just use that.
 </li>
 </ul>
 
