--- a/www/project_members.html
+++ b/www/project_members.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_members.html,v 1.4 2001/05/21 03:39:25 jon Exp $ --> 
+<!-- $Id: project_members.html,v 1.5 2001/05/23 18:50:26 jon Exp $ --> 
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -8,9 +8,20 @@
 <table border="0" cellpadding="2" width="98%" bgcolor="white">
     <tr> 
         <td width="100%" bgcolor="#CCCC99"><strong><font color="#000033"
-face="Arial, Helvetica, sans-serif"> Scarab Participants </font></strong></td>
+face="Arial, Helvetica, sans-serif">Scarab Participation</font></strong></td>
     </tr>
 </table>
+
+<h3>Scarab.Tigris.org Community</h3>
+
+<p>
+Join the Scarab.Tigris.org community by <a
+href="/servlets/Join">registering</a> with the site and then <a
+href="/servlets/ProjectMembershipRequest">requesting</a> a role within
+the Scarab project.
+</p>
+
+<h3>Mailing lists</h3>
 
 <p>To get involved with the development of Scarab, please 
 join the developer's <a href="/servlets/ProjectMailingListList">mailing list</a>.
@@ -30,6 +41,18 @@ join the developer's <a href="/servlets/ProjectMailingListList">mailing list</a>
         postings a week, a few evenings, several hours a week, this is part of my 
         full-time job).</li>
 </ul>
+
+<h3>Internet Relay Chat</h3>
+
+<p>
+We often "hang out" on IRC at cvs.working-dogs.com:6667 #scarab. You are
+welcome to come join us. We try to keep decision making on the mailing
+list or at least post the IRC logs when we do make decisions over IRC.
+However, if you need a quick answer to something or feel that email is
+too slow of a communication forum, please join us. Please note, we may
+be logged in, but not actually paying attention (we are busy working on
+Scarab), so hang out for a bit if no one responds right way.
+</p>
 
 <table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
     <tr> 
@@ -92,14 +115,17 @@ the mailing list. Do not be afraid to ask questions.
 </table>
 </p>
 
-<p>The following people are currently working on this project:</p>
+<p>
+The following people are currently working on this project:
+</p>
 
 <ul>
 <li>Jon S. Stevens - Project Leader and Lead Engineer</li>
 <li>John McNally   - Engineer</li>
-<li>James Gallegos - CollabNet Product Manager</li>
 <li>Brian O'Kelley - IA/UI Design</li>
-<li>TBA - Template Engineers</li>
+<li>Elicia David   - Template Engineer</li>
+<li>James Gallegos - CollabNet Product Manager</li>
+<li>Michelle Hainline - CollabNet Project Manager</li>
 </ul>
 
 </body>
