--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.8 2001/05/21 23:30:50 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.9 2001/05/24 22:39:06 braino Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/05/21 23:30:50 $
+Last Updated: $Date: 2001/05/24 22:39:06 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -153,7 +153,7 @@ a list of what each persons roles and responsibilities are.
 <td>May 7-11</td><td>1st draft (Work flows 2.0.0, 2.1.0, 2.2.0, 2.5.0, 2.6.0)</td><td>completed</td>
 </tr>    
 <tr>
-<td>May 14-18</td><td>1st draft (Work flows 2.3.0, 2.0.0.1, 3.0.0.a, 3.1.0.a, 3.2.0.a, 3.3.0.a, 3.4.0.a, 3.5.0.a, 3.6.0.a)</td><td>ongoing</td>
+<td>May 14-24</td><td>1st draft (Work flows 2.3.0, 2.0.0.1, 3.0.0.a, 3.1.0.a, 3.2.0.a, 3.3.0.a, 3.4.0.a, 3.5.0.a, 3.6.0.a)</td><td>ongoing</td>
 </tr>    
 <tr>
 <td>May 16</td><td>Work flow review (Jon, Brian)</td><td>ongoing</td>
