--- a/www/project_development_tools_and_technology.html
+++ b/www/project_development_tools_and_technology.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_development_tools_and_technology.html,v 1.2 2001/05/21 03:39:25 jon Exp $ -->
+<!-- $Id: project_development_tools_and_technology.html,v 1.3 2001/05/27 19:45:16 jon Exp $ -->
 <html>
 <head>
 <title>Scarab: Development Tools and Technologies</title>
@@ -14,7 +14,7 @@
 </table>
 <p>
 Here is a list of technologies that are currently slated to be used
-within the project:
+within the project.
 </p>
 <ul>
     <li><a href="http://jakarta.apache.org/turbine/">Turbine</a> will be used as the 
@@ -26,10 +26,14 @@ within the project:
     be used as the abstraction between the user interface and the
     business logic. The look and feel of this application easily
     customizable.</li>
-    <li><a href="http://www.mysql.com">MySQL</a> will be the SQL backend.</li>
+    <li><a href="http://www.mysql.com">MySQL</a> will be the SQL backend
+    (Support for other RDBM's will also be included. We are just
+    developing with MySQL for now because it is a commonly used
+    database.)</li>
     <li><a href="http://jakarta.apache.org/">Tomcat</a> 
-        will be the target Java Servlet engine.</li>
+        will be the target Java Servlet engine (Any Servlet API 2.1 or higher
+        engine will work).</li>
 </ul>
-<p></p>
+
 </body>
 </html>
