placing numbers onto the actual milestones based on brian's pdf document Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.10 2001/05/30 00:20:56 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.11 2001/05/30 18:01:08 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/05/30 00:20:56 $
+Last Updated: $Date: 2001/05/30 18:01:08 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -30,9 +30,10 @@ Last Updated: $Date: 2001/05/30 00:20:56 $
     <strong>Milestone 0</strong>: IA/UI started.
 </li>
 <li>
-    <strong>Milestone 1</strong>: Enter an Issue. Show an Issue.
-    Attribute Editor. <a href="integration.html">Integration</a> issues
-    identified and abstracted. Login. Registration.
+    <strong>Milestone 1</strong>: Enter an Issue (2.1.0). Show an Issue
+    (2.6.1.x). Attribute Editor (2.1.4.0.1 and 3.0.0). <a
+    href="integration.html">Integration</a> issues identified and
+    abstracted. Login. Registration.
 </li>
 <li>
     <strong>Milestone 2</strong>: Query for an Issue (3 types: simple
@@ -45,7 +46,8 @@ Last Updated: $Date: 2001/05/30 00:20:56 $
 </li>
 <li>
     <strong>Milestone 4</strong>: Implement business logic for editing
-    an issue (ie: Lifecycle of a bug).</li>
+    an issue (ie: Lifecycle of a bug).
+</li>
 <li>
     <strong>Milestone 5</strong>: Sending email on issue modifications.
 </li>
@@ -61,6 +63,10 @@ Last Updated: $Date: 2001/05/30 00:20:56 $
 </li>
 <li>
     <strong>Milestone 9</strong>: Import Bugzilla database.
+</li>
+<li>
+    <strong>Milestone 10</strong>: Enhanced Attribute Customization
+    (Attribute Groups).
 </li>
 <li>
     <strong>Milestone X</strong>: Secure system.
