--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.11 2001/05/30 18:01:08 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.12 2001/05/30 20:52:01 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/05/30 18:01:08 $
+Last Updated: $Date: 2001/05/30 20:52:01 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -98,9 +98,13 @@ The Scarab project is currently under development. It has been under
 development for quite some time now, however the development hasn't been
 100% on Scarab, it has been on the underlying framework technologies
 that we are using to develop Scarab. The reason is that we have wanted
-to solve some of the MVC design issues before trying to create the
-application. This development has gone on in the Turbine and Velocity
-projects on <a href="http://jakarta.apache.org/">jakarta.apache.org</a>
+to solve some of the MVC design issues (<a
+href="http://jakarta.apache.org/turbine/pullmodel.html">Pull Model</a>
+and <a
+href="http://jakarta.apache.org/turbine/services/intake-service.html">Intake</a>)
+before trying to create the application. This development has gone on in
+the Turbine and Velocity projects on <a
+href="http://jakarta.apache.org/">jakarta.apache.org</a>
 </p>
 
 <h3>Recent Activities</h3>
