checking in changes that briano sent me that maps the IA numbers to the milestones. Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.12 2001/05/30 20:52:01 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.13 2001/06/05 22:43:33 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/05/30 20:52:01 $
+Last Updated: $Date: 2001/06/05 22:43:33 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -30,43 +30,58 @@ Last Updated: $Date: 2001/05/30 20:52:01 $
     <strong>Milestone 0</strong>: IA/UI started.
 </li>
 <li>
-    <strong>Milestone 1</strong>: Enter an Issue (2.1.0). Show an Issue
-    (2.6.1.x). Attribute Editor (2.1.4.0.1 and 3.0.0). <a
-    href="integration.html">Integration</a> issues identified and
-    abstracted. Login. Registration.
+    <strong>Milestone 1</strong>: 
+Enter an Issue (2.1.0)(2.1.1)(2.1.2) 
+Show an Issue (2.6.1.x)(2.6.2.x)  
+Attribute Editor (2.1.4.0: milestone 1 version)(3.0.0)(3.0.2.0) 
+<a href="integration.html">Integration</a> issues identified and
+ abstracted. Login. Registration.
 </li>
 <li>
-    <strong>Milestone 2</strong>: Query for an Issue (3 types: simple
-    text entry box, basic and advanced). Query for an Issue by id. Save
-    stored query.
+    <strong>Milestone 2</strong>: 
+Query for an Issue (2.2.0.x (simple query)) (2.2.0)(2.6.0) 
+Query for an Issue by id (part of global navigation).  
+Save stored query. (2.2.1)
 </li>
 <li>
-    <strong>Milestone 3</strong>: Edit an Issue. Assign people to an
-    Issue. Move/Copy Issue.
+    <strong>Milestone 3</strong>: 
+Edit an Issue.  
+Assign people to an Issue. (2.1.3) 
+Move/Copy Issue.  
 </li>
 <li>
-    <strong>Milestone 4</strong>: Implement business logic for editing
-    an issue (ie: Lifecycle of a bug).
+    <strong>Milestone 4</strong>:
+Implement business logic for editing an issue (2.5.0)(3.5.0) 
+(ie: Lifecycle of a bug).  
 </li>
 <li>
-    <strong>Milestone 5</strong>: Sending email on issue modifications.
+    <strong>Milestone 5</strong>: 
+Sending email on issue modifications. (3.5.1) 
 </li>
 <li>
-    <strong>Milestone 6</strong>: Create a report (show and save a
-    report).
+    <strong>Milestone 6</strong>:
+Create a report (requires further definition) 
+(show and save a report).  
 </li>
 <li>
-    <strong>Milestone 7</strong>: Email saved reports.
+    <strong>Milestone 7</strong>:
+Email saved reports. presentation layer review: determine possible
+alternate data views that suit specific user/task driven needs (not a
+functionality review). Confirm issue queue interface methodology
 </li>
 <li>
-    <strong>Milestone 8</strong>: Attach a file to an Issue.
+    <strong>Milestone 8</strong>:
+Attach a file to an Issue.  
+Queue interface integration with Sourcecast (2.0.0.1.1)(2.0.0.1.2)(2.0.0.1.3) 
 </li>
 <li>
     <strong>Milestone 9</strong>: Import Bugzilla database.
 </li>
 <li>
-    <strong>Milestone 10</strong>: Enhanced Attribute Customization
-    (Attribute Groups).
+    <strong>Milestone 10</strong>:
+Enhanced Attribute Customization (Attribute Groups). (2.1.4.0: milestone
+10 version) (2.1.4.0.1)(2.1.4.1)(2.1.4.2) Attribute change history
+(3.0.1.0)
 </li>
 <li>
     <strong>Milestone X</strong>: Secure system.
