added some intial dates to the milestones updated current status Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.13 2001/06/05 22:43:33 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.14 2001/06/10 22:38:51 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,17 +20,22 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/06/05 22:43:33 $
+Last Updated: $Date: 2001/06/10 22:38:51 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
+
+<p>
+Code Freeze / QA Starts: September 15th<br/>
+Code completion: October 15th
+</p>
 
 <ul>
 <li>
     <strong>Milestone 0</strong>: IA/UI started.
 </li>
 <li>
-    <strong>Milestone 1</strong>: 
+    <strong>Milestone 1</strong> (June 11th - June 25th): 
 Enter an Issue (2.1.0)(2.1.1)(2.1.2) 
 Show an Issue (2.6.1.x)(2.6.2.x)  
 Attribute Editor (2.1.4.0: milestone 1 version)(3.0.0)(3.0.2.0) 
@@ -38,47 +43,47 @@ Attribute Editor (2.1.4.0: milestone 1 version)(3.0.0)(3.0.2.0)
  abstracted. Login. Registration.
 </li>
 <li>
-    <strong>Milestone 2</strong>: 
+    <strong>Milestone 2</strong> (June 25th - July 9th): 
 Query for an Issue (2.2.0.x (simple query)) (2.2.0)(2.6.0) 
 Query for an Issue by id (part of global navigation).  
 Save stored query. (2.2.1)
 </li>
 <li>
-    <strong>Milestone 3</strong>: 
+    <strong>Milestone 3</strong> (July 9th - August 13th): 
 Edit an Issue.  
 Assign people to an Issue. (2.1.3) 
 Move/Copy Issue.  
 </li>
 <li>
-    <strong>Milestone 4</strong>:
+    <strong>Milestone 4</strong> (July 9th - August 13th):
 Implement business logic for editing an issue (2.5.0)(3.5.0) 
 (ie: Lifecycle of a bug).  
 </li>
 <li>
-    <strong>Milestone 5</strong>: 
+    <strong>Milestone 5</strong> (August 13th - 17th): 
 Sending email on issue modifications. (3.5.1) 
 </li>
 <li>
-    <strong>Milestone 6</strong>:
+    <strong>Milestone 6</strong> (August 17th - 24th):
 Create a report (requires further definition) 
 (show and save a report).  
 </li>
 <li>
-    <strong>Milestone 7</strong>:
+    <strong>Milestone 7</strong> (August 24th - 31st + ongoing stuff until QA):
 Email saved reports. presentation layer review: determine possible
 alternate data views that suit specific user/task driven needs (not a
 functionality review). Confirm issue queue interface methodology
 </li>
 <li>
-    <strong>Milestone 8</strong>:
+    <strong>Milestone 8</strong> (August 31st - Sept 15th + queue integration is contingent on completion of SC 2.0):
 Attach a file to an Issue.  
 Queue interface integration with Sourcecast (2.0.0.1.1)(2.0.0.1.2)(2.0.0.1.3) 
 </li>
 <li>
-    <strong>Milestone 9</strong>: Import Bugzilla database.
+    <strong>Milestone 9</strong> (August 31st - Sept 15th): Import Bugzilla database.
 </li>
 <li>
-    <strong>Milestone 10</strong>:
+    <strong>Milestone 10</strong> (August 31st - Sept 15th + queue integration is contingent on completion of SC 2.0):
 Enhanced Attribute Customization (Attribute Groups). (2.1.4.0: milestone
 10 version) (2.1.4.0.1)(2.1.4.1)(2.1.4.2) Attribute change history
 (3.0.1.0)
@@ -153,6 +158,15 @@ up to date reflection of the current project status.
 <li>
     5-29-01 - John is working on assigning an issue to a user and the 
     permission system integration.
+</li>
+<li>
+    6-07-01 - Javaone has been taking up a bunch of time. Recieved
+    initial UI mockups.
+</li>
+<li>
+    6-10-01 - Added tentative dates to milestones. Community involvement
+    may help lower the timeframes. (hint hint). Working on initial
+    integration of Milestone 1 UI mockups.
 </li>
 </ul>
 
