added vote management to m3 Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.14 2001/06/10 22:38:51 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.15 2001/06/12 19:32:17 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/06/10 22:38:51 $
+Last Updated: $Date: 2001/06/12 19:32:17 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -52,7 +52,8 @@ Save stored query. (2.2.1)
     <strong>Milestone 3</strong> (July 9th - August 13th): 
 Edit an Issue.  
 Assign people to an Issue. (2.1.3) 
-Move/Copy Issue.  
+Move/Copy Issue.
+Vote management. (2.0.0.2, 3.3.0)
 </li>
 <li>
     <strong>Milestone 4</strong> (July 9th - August 13th):
