latest project status Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.15 2001/06/12 19:32:17 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.16 2001/06/19 20:05:09 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/06/12 19:32:17 $
+Last Updated: $Date: 2001/06/19 20:05:09 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -96,20 +96,24 @@ Enhanced Attribute Customization (Attribute Groups). (2.1.4.0: milestone
 
 <h3>Progress</h3>
 
+<p>Overall:</p>
 <ul>
     <li>IA/UI has been started.</li>
     <li><a href="integration.html">Integration issues</a> have been
     started and nearly completed.</li>
-    <li>Login/Registration has been implemented.</li>
-    <li>Enter an issue has been started.</li>
-    <li>Show an issue has been started.</li>
-    <li>Query for an existing issue has been started.</li>
-    <li>Attribute editor has been started.</li>
-    <li>Integration of Flux has been started.</li>
     <li>Module code has been abstracted out using a Factory and Services
     pattern so that it is possible to <a
     href="integration.html">integrate</a> Scarab into other
     systems.</li>
+</ul>
+<p>Specific:</p>
+<ul>
+    <li>Login/Registration has been implemented.</li>
+    <li>Enter an issue has been started.</li>
+    <li>View an issue has been started.</li>
+    <li>Query for an existing issue has been started.</li>
+    <li>Attribute editor has been started.</li>
+    <li>Integration of Flux has been started.</li>
 </ul>
 
 <h3>Details</h3>
@@ -145,31 +149,21 @@ up to date reflection of the current project status.
     mailing list</a> to discuss this development.
 </li>
 <li>
-    5-21-01 - Jon S. pretty much finished up the abstraction of the
-    Module code so that any implementation can be provided of a Module
-    and Scarab will just use that.
-</li>
-<li>
-    5-29-01 - Jon met with Elicia and BrianO and went over preliminary
-    UI screens. BrianO will isolate which screens make it into Milestone
-    1 and then over the next few days, Elicia will be working to convert
-    those screens into Turbine Screen modules and get them checked into
-    CVS so that we can start to make them functional.
-</li>
-<li>
-    5-29-01 - John is working on assigning an issue to a user and the 
-    permission system integration.
-</li>
-<li>
-    6-07-01 - Javaone has been taking up a bunch of time. Recieved
-    initial UI mockups.
-</li>
-<li>
     6-10-01 - Added tentative dates to milestones. Community involvement
     may help lower the timeframes. (hint hint). Working on initial
     integration of Milestone 1 UI mockups.
 </li>
+<li>
+    6-19-01 - John McNally is back in action after being out for health
+    reasons. Welcome back John! :-) Elicia is working on IssueView
+    (2.6.1.x and 2.6.2.x). John is working on Enter Issue (2.1.1 and
+    2.1.2). Jon is working on Attribute Editor (2.1.4.0). Warner is
+    going to be working on M2 stuff ahead of schedule as soon as 2.2.0
+    is available.
+</li>
 </ul>
+
+<!--
 
 <h3>What People Are Currently Working On</h3>
 
@@ -179,10 +173,9 @@ a list of what each persons roles and responsibilities are.
 </p>
 
 <ul>
-    <li><strong>Code</strong>: John McNally, Jon S. Stevens</li>
     <li><strong>UI/IA</strong>: Brian O'Kelley, Jon S. Stevens</li>
-    <li><strong>Templates</strong>: John McNally, Jon S. Stevens, Elicia
-    David</li>
+    <li><strong>Code/Templates</strong>: John McNally, Jon S. Stevens, Elicia
+    David, Warner Onstine</li>
     <li><strong>Docs</strong>: Jon S. Stevens</li>
 </ul>
 
@@ -213,6 +206,7 @@ a list of what each persons roles and responsibilities are.
 <td>May 21-25</td><td>Work flow revisions</td><td>&nbsp;</td>
 </tr>    
 </table>
+-->
 
 </body>
 </html>
