--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.16 2001/06/19 20:05:09 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.17 2001/06/23 00:15:55 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/06/19 20:05:09 $
+Last Updated: $Date: 2001/06/23 00:15:55 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -35,7 +35,7 @@ Code completion: October 15th
     <strong>Milestone 0</strong>: IA/UI started.
 </li>
 <li>
-    <strong>Milestone 1</strong> (June 11th - June 25th): 
+    <strong>Milestone 1</strong> (June 11th - June 29th): 
 Enter an Issue (2.1.0)(2.1.1)(2.1.2) 
 Show an Issue (2.6.1.x)(2.6.2.x)  
 Attribute Editor (2.1.4.0: milestone 1 version)(3.0.0)(3.0.2.0) 
@@ -160,6 +160,15 @@ up to date reflection of the current project status.
     2.1.2). Jon is working on Attribute Editor (2.1.4.0). Warner is
     going to be working on M2 stuff ahead of schedule as soon as 2.2.0
     is available.
+</li>
+<li>
+    6-22-01 - People are still coding, however the M1 milestone has been
+    pushed back another 5 days until 6-29 because Jon is out of town for
+    6-25-6-26 and I think that we won't make 6-25 for M1. Some of the
+    delay is a result of John being out sick for a week and Jon trying
+    to help figure out some show stopping bugs in Catalina's classloader
+    implementation that causes Scarab to not function when classes are
+    reloaded. These were both unanticpated delays.
 </li>
 </ul>
 
