added more status updates Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.17 2001/06/23 00:15:55 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.18 2001/07/02 23:10:35 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/06/23 00:15:55 $
+Last Updated: $Date: 2001/07/02 23:10:35 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -154,14 +154,6 @@ up to date reflection of the current project status.
     integration of Milestone 1 UI mockups.
 </li>
 <li>
-    6-19-01 - John McNally is back in action after being out for health
-    reasons. Welcome back John! :-) Elicia is working on IssueView
-    (2.6.1.x and 2.6.2.x). John is working on Enter Issue (2.1.1 and
-    2.1.2). Jon is working on Attribute Editor (2.1.4.0). Warner is
-    going to be working on M2 stuff ahead of schedule as soon as 2.2.0
-    is available.
-</li>
-<li>
     6-22-01 - People are still coding, however the M1 milestone has been
     pushed back another 5 days until 6-29 because Jon is out of town for
     6-25-6-26 and I think that we won't make 6-25 for M1. Some of the
@@ -169,6 +161,15 @@ up to date reflection of the current project status.
     to help figure out some show stopping bugs in Catalina's classloader
     implementation that causes Scarab to not function when classes are
     reloaded. These were both unanticpated delays.
+</li>
+<li>
+    7-02-01 - Elicia is almost finished with IssueView. John is mostly
+    done with IssueEntry. I (Jon) am still behind on AttributeEditor.
+    However, I have made progress on creating a <a
+    href="http://scarab.whichever.com/">Runbox</a> where people can see
+    Scarab running on a test server. Each night, Scarab and Turbine are
+    checked out from CVS, built clean and Catalina is restarted. We are
+    still waiting on M2 UI's from Briano.
 </li>
 </ul>
 
