link to mysql-internationalization.html Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.7 2001/05/21 03:39:25 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.8 2001/07/09 19:46:15 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -41,6 +41,11 @@
                 <li>standard specifications.</li> 
             </ul>
 
+            <p>Misc Documentation:</p>
+            <ul>
+                <li><a href="mysql-internationalization.html">MySQL Internationalization Issues</a></li>
+            </ul>
+            
             <p>To get involved, join the developer's mailing list by sending e-mail 
                 to <a href="mailto:dev-subscribe@scarab.tigris.org">dev-subscribe@scarab.tigris.org</a>.</p>
             <p> 
