--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.19 2001/07/11 00:39:04 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.20 2001/07/19 00:44:29 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/07/11 00:39:04 $
+Last Updated: $Date: 2001/07/19 00:44:29 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -51,6 +51,7 @@ Attribute Editor (2.1.4.0: milestone 1 version)(3.0.0)(3.0.2.0)
 <li>
     <strong>Milestone 2 (20% Complete)</strong> (June 25th - July 20th): 
 Query for an Issue (2.2.0.x (simple query)) (2.2.0)(2.6.0) 
+Add / Remove Attributes From View (2.6.0.1)
 Query for an Issue by id (part of global navigation).  
 Save stored query. (2.2.1)
 </li>
@@ -58,7 +59,7 @@ Save stored query. (2.2.1)
     <strong>Milestone 3</strong> (July 9th - August 13th): 
 Edit an Issue.  
 Assign people to an Issue. (2.1.3) 
-Move/Copy Issue.
+Move/Copy Issue. (2.7.0)
 Vote management. (2.0.0.2, 3.3.0)
 </li>
 <li>
@@ -84,16 +85,18 @@ functionality review). Confirm issue queue interface methodology
 <li>
     <strong>Milestone 8</strong> (August 31st - Sept 15th + queue integration is contingent on completion of SC 2.0):
 Attach a file to an Issue.  
-Queue interface integration with Sourcecast (2.0.0.1.1)(2.0.0.1.2)(2.0.0.1.3) 
+Queue interface integration with Sourcecast (2.0.0.1.1)(2.0.0.1.2)(2.0.0.1.3)
+Approve / Reject User Submitted X (3.6.0)
 </li>
 <li>
     <strong>Milestone 9</strong> (August 31st - Sept 15th): Import Bugzilla database.
 </li>
 <li>
     <strong>Milestone 10</strong> (August 31st - Sept 15th + queue integration is contingent on completion of SC 2.0):
-Enhanced Attribute Customization (Attribute Groups). (2.1.4.0: milestone
-10 version) (2.1.4.0.1)(2.1.4.1)(2.1.4.2) Attribute change history
-(3.0.1.0)
+Enhanced Attribute Customization (Attribute Groups). (2.1.4.0: milestone 10 version) (2.1.4.0.1)(2.1.4.1)(2.1.4.2) 
+Attribute change history (3.0.1.0)
+Save / Edit Template (2.1.0.1)
+Template List (2.1.0.2)
 </li>
 <li>
     <strong>Milestone X</strong>: Secure system.
