tweak per briano

--- a/www/ui_new/milestone1x_screens/2-1-1.html
+++ b/www/ui_new/milestone1x_screens/2-1-1.html
@@ -43,6 +43,8 @@
 
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
 
+      <p class="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
+
       <h3>New Issue</h3>
 
              <table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -85,7 +87,7 @@
 
              <table width="100%" cellpadding="3" cellspacing="2" border="1">
         <tr>
-         <th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+         <th nowrap="nowrap"><a href="#"><img src="../images/milestonex_screens/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../images/milestonex_screens/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
 
          <th><a href="#" title="sort">issue ID #:</a></th>
 
@@ -184,29 +186,26 @@
          <td>xx/xx/2001</td>
         </tr>
        </table>
-      
-
-      <p>
-       <input type="submit" value="add vote to selected" />
-      </p>
 
       <div class="axial">
        <table width="100%" cellpadding="3" cellspacing="2" border="1">
         <tr>
-         <th width="120">append with note:</th>
+         <th width="120">note:</th>
 
          <td>
           <textarea rows="4" cols="40">
           </textarea> 
-
-          <p><input type="submit" value="submit note" /></p>
          </td>
         </tr>
        </table>
       </div>
 
-      <p>
-       <input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" />
+          <p><input type="submit" value="add vote to selected" />&nbsp;
+          <input type="submit" value="submit note only" /></p>
+          Text entered into the "note" text area will be appended to "comments" of selected issue(s)
+          when either "add vote to selected" or "submit note only" are executed.
+
+      <p class="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" />
       </p>
      </div></td>
     </tr>
