various tweaks per briano

--- a/www/ui_new/milestone3x_screens/2-1-3.html
+++ b/www/ui_new/milestone3x_screens/2-1-3.html
@@ -39,52 +39,78 @@
       </div>
 
       <div class="app" id="div2-2-1">
-      <h2>Assign Issue (2.1.3)</h2>
+       <h2>Assign Issue (2.1.3)</h2>
 
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
+       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
 
-<p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
+       <p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
 
-      <h3>Assign Issue</h3>
+       <h3>Assign Issue</h3>
 
-      <div class="axial">
-       <table cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">users:</th>
+       <div class="sidebyside">
+        <table cellpadding="3" cellspacing="2" border="1" width="100%">
+         <tr>
+          <th>users</th>
 
-         <td><select name="select" size="8" multiple="multiple">
-	     <option>Name 1</option>
-		 <option>Name 2</option>
-		 <option>Name 3</option>
-		 <option>Name 4</option>
-		 <option>Name 5</option>
-	     </select>
-		 <input type="submit" value="add" />
-		 </td>
-        </tr>
+          <th>assignees</th>
+         </tr>
 
-        <tr>
-         <th width="120">assignees:</th>
-         <td><select name="select" size="8" multiple="multiple">
-	     <option>Name 1</option>
-		 <option>Name 2</option>
-		 <option>Name 3</option>
-	     </select>
-		 <input type="submit" value="remove" />
-		 </td>
-        </tr>
+         <tr>
+          <td>
+           <select name="select" size="8" multiple="multiple">
+            <option>
+             Name 1
+            </option>
 
-        <tr>
-         <th width="120">note: (email to assignees)</th>
+            <option>
+             Name 2
+            </option>
 
-         <td><textarea rows="4" cols="40">
-         </textarea></td>
-        </tr>
-       </table>
+            <option>
+             Name 3
+            </option>
+
+            <option>
+             Name 4
+            </option>
+
+            <option>
+             Name 5
+            </option>
+           </select> 
+
+           <p><input type="submit" value="add selected" /></p>
+          </td>
+
+          <td>
+           <select name="select" size="8" multiple="multiple">
+            <option>
+             Name 1
+            </option>
+
+            <option>
+             Name 2
+            </option>
+
+            <option>
+             Name 3
+            </option>
+           </select> 
+
+           <p><input type="submit" value="remove selected" /></p>
+          </td>
+         </tr>
+        </table>
+
+        <h4>Note (email to assignees)</h4>
+
+        <p><textarea rows="4" cols="40">
+        </textarea></p>
+       </div>
+
+       <p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
       </div>
-
-<p class="functnbar"><input type="submit" value="submit" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
-     </div></td>
+     </td>
     </tr>
    </table>
   </form>
