--- a/www/ui/milestone1x_screens/2-6-1.html
+++ b/www/ui/milestone1x_screens/2-6-1.html
@@ -43,7 +43,10 @@
 
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
 
-<p class="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" />&#160;issues | 3 of 5</p>
+       <p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
+
+	  <p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+
 
       <h3>Issue ID #123</h3>
 
@@ -347,11 +350,11 @@
        <a href="#">view complete history</a>
       </p>
 
-      <p>
-       <input type="submit" value="submit append" />&#160;<input type="submit" value="cancel" />&#160;<input type="reset" value="reset" />
-      </p>
+<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
 
-<p class="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" />&#160;issues | 3 of 5</p>
+
+       <p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
+
      </div></td>
     </tr>
    </table>
