--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -43,11 +43,11 @@
 
        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
 
-       <p class="functnbar"><input type="submit" value="bulk edit selected issues" />&#160;<input type="submit" value="bulk reassign" /></p>
+       <p>&#171; previous | 1 of 1 | next&#187; (<a href="#">add/remove attributes from view</a>)</p>
+
+       <p class="functnbar"><input type="submit" value="view selected (verbose)" />&#160;<input type="submit" value="view all (verbose)" />&#160;<sup>|</sup>&#160;<input type="submit" value="reassign selected" /></p>
 
        <h3>Search Results</h3>
-
-       <p><a href="#">&#171;</a> <a href="#">previous</a> | 3 of 5 | <a href="#">next</a> <a href="#">&#187;</a> (<a href="#">add/remove attributes from view</a>)</p>
 
        <table width="100%" border="1" cellspacing="2" cellpadding="3">
         <tr>
@@ -110,12 +110,18 @@
          <td>priority 1</td>
         </tr>
        </table>
-       <p><a href="#">&#171;</a> <a href="#">previous</a> | 3 of 5 | <a href="#">next</a> <a href="#">&#187;</a> (<a href="#">add/remove attributes from view</a>)</p>
 
-       <p>issues per page:&#160; <input type="radio" name="foo" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100</p>
+	   
+       <p class="functnbar"><input type="submit" value="view selected (verbose)" />&#160;<input type="submit" value="view all (verbose)" />&#160;<sup>|</sup>&#160;<input type="submit" value="reassign selected" /></p>
 
-       <p class="functnbar"><input type="submit" value="bulk edit selected issues" />&#160;<input type="submit" value="bulk reassign" /></p>
+       <p>issues per page:&#160; <input type="radio" name="foo" checked /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" /></p>
+
+       <p>&#171; previous | 1 of 1 | next&#187; (<a href="#">add/remove attributes from view</a>)</p>
+
       </div>
+
+
+
      </td>
     </tr>
    </table>
