--- a/www/ui/milestone1x_screens/2-6-2.html
+++ b/www/ui/milestone1x_screens/2-6-2.html
@@ -43,16 +43,18 @@
 
        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
 
-       <p class="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" />&#160;issues | 3 of 5</p>
 
-       <h3>Issue ID #123</h3>
+       <p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
+
+
+       <h3>Issue ID #120</h3>
 
        <div class="axial">
         <table width="100%" cellpadding="3" cellspacing="2" border="1">
          <tr>
           <th width="120">issue id #:</th>
 
-          <td>123</td>
+          <td>120</td>
          </tr>
 
          <tr>
@@ -338,19 +340,16 @@
 
        <p><a href="#">view complete history</a></p>
 
-       <p><input type="submit" value="submit append" />&#160;<input type="submit" value="cancel" />&#160;<input type="reset" value="reset" /> <!-- copy -->
-       </p>
+<p class="functnbar"><input type="submit" value="save issue #120" />&#160;<input type="submit" value="cancel" /></p>
 
-       <p class="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" />&#160;issues | 3 of 5</p>
-
-       <h3>Issue ID #123</h3>
+       <h3>Issue ID #121</h3>
 
        <div class="axial">
         <table width="100%" cellpadding="3" cellspacing="2" border="1">
          <tr>
           <th width="120">issue id #:</th>
 
-          <td>123</td>
+          <td>121</td>
          </tr>
 
          <tr>
@@ -636,9 +635,14 @@
 
        <p><a href="#">view complete history</a></p>
 
-       <p><input type="submit" value="submit append" />&#160;<input type="submit" value="cancel" />&#160;<input type="reset" value="reset" /></p>
+<p class="functnbar"><input type="submit" value="save issue #121" />&#160;<input type="submit" value="cancel" /></p>
 
-       <p class="functnbar"><input type="submit" value="previous" />&#160;<input type="submit" value="next" />&#160;issues | 3 of 5</p>
+
+       <p>issues per page:&#160; <input type="radio" name="foo" checked /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" /></p>
+
+
+       <p>&#171; previous | 1 page of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
+
       </div>
      </td>
     </tr>
